--- a/src/css/rotateHeads.css
+++ b/src/css/rotateHeads.css
@@ -4,7 +4,6 @@ div[data-role="cyt-turnPage-3d"] .box {
     width: 100%;
     height: 100%;
 	transform-style: preserve-3d;
-    transform: perspective(3500px) rotateX(0deg);
 }
 div[data-role="cyt-turnPage-3d"] .page {
     position: absolute;
@@ -12,5 +11,5 @@ div[data-role="cyt-turnPage-3d"] .page {
     height: 100%;
     left: 0;
     top: 0;
-    display: none;
+    opacity:0;
 }
