--- a/src/css/development.css
+++ b/src/css/development.css
@@ -32,6 +32,9 @@
 .panel-body {
     padding: 50px 0!important;
 }
+.left20p{
+    padding-left: 26%;
+}
 .panel-a>pre {
     font-size: 16px;
     animation: comeLeft 0.3s ease both;
